Fixed up some clipping issues in headers

--- a/src/main/webapp/assets/css/chembench.css
+++ b/src/main/webapp/assets/css/chembench.css
@@ -15,6 +15,11 @@ footer {
     margin-bottom: 1.5em;
 }
 
+h1, h2, h3, h4, h5, h6 {
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+
 /* navbar styling */
 .nav-list {
     list-style-type: none;
